<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
    <PreferenceCategory
        android:key="pref_screen_settings"
        android:title="App Settings">

        <com.stuartrosk.borders.app.UnlockDialog
            android:key="pref_screen_unlock"
            android:title="Unlock!"
            android:summary="Unlock all features on the app -- including all custom positions and more themes!"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="@string/notification_pref"
            android:title="Show Notification"
            android:summary="Show the play/pause notification in the status bar."
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="@string/notification_icon_pref"
            android:title="Show Status Bar Icon"
            android:summary="Show an icon in the status bar when notification is running."
            android:defaultValue="true"
            android:dependency="@string/notification_pref"/>
        <!--<CheckBoxPreference
            android:key="gesture_pref"
            android:title="Enable Gesture"
            android:summary="Draw a square to toggle borders on/off on any screen." />-->
        <!--<CheckBoxPreference
            android:key="black_bar_pref"
            android:title="Black Navigation Bar"
            android:summary="Attempt to always keep the black navigation bar on the bottom of the phone."/>-->
    </PreferenceCategory>

    <PreferenceCategory
        android:key="system_settings"
        android:title="Border Visibility Settings">

        <CheckBoxPreference
            android:key="@string/startup_pref"
            android:title="Run at Startup"
            android:summary="Show the borders when the phone boots."
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="@string/lockscreen_pref"
            android:title="Hide on Lockscreen"
            android:summary="(Experimental) Hide the borders on the phone's lockscreen."
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="@string/system_fullscreen_pref"
            android:title="Hide on Fullscreen Apps"
            android:summary="(Experimental) Hide the borders when another app is fullscreen."
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="@string/system_pulldown_pref"
            android:title="Hide on Pulldown of Status Bar"
            android:summary="(Experimental) Hide the borders when the Android system bar is pulled down."
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="@string/system_keyboard_pref"
            android:title="Hide on Visible Keyboard"
            android:summary="(Experimental) Hide the borders whenever the system keyboard is visible."
            android:defaultValue="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_screen_extras"
        android:title="Borders App">

        <com.stuartrosk.borders.app.FeedbackDialog
            android:key="pref_screen_feedback"
            android:title="Feedback"
            android:summary="Rate us or provide feedback."
            android:defaultValue="true"/>

        <Preference
            android:key="pref_about"
            android:title="App Version"
            android:summary=""/>

    </PreferenceCategory>

</PreferenceScreen>